# oscillinklattticedb

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE-LATTICEDB  PARTNER-ADDENDUM.md  PATENTS.md  README.md  SECURITY.md  THIRD-PARTY-NOTICES.md  TRADEMARKS.md  Untitled-1.sty  benchmark.md  codecov.yml  docker-compose.observability.yml  docker-compose.yml  firm.demo.yaml  firm.yaml  rendered.yaml  worklog.md
api/: .coveragerc  .gitignore  README.md  pyproject.toml  pyrightconfig.json
api/_cov_annot/: z_15baa36144bfe2b2_composite.py,cover  z_15baa36144bfe2b2_embeddings.py,cover  z_15baa36144bfe2b2_index_faiss.py,cover  z_15baa36144bfe2b2_ingest.py,cover  z_15baa36144bfe2b2_lattice.py,cover  z_15baa36144bfe2b2_merkle.py,cover  z_15baa36144bfe2b2_receipts.py,cover  z_15baa36144bfe2b2_router.py,cover  z_15baa36144bfe2b2_shards.py,cover  z_15baa36144bfe2b2_utils.py,cover  z_15baa36144bfe2b2_verify.py,cover  z_15baa36144bfe2b2_watcher.py,cover  z_5f5a17c013354698_main.py,cover
api/app/: main.py  schemas.py
api/bench/: summary.json
api/scripts/: bench_chat_http.py  bench_compose.py  bench_compose_latency.py  bench_concurrency.py  bench_http.py  bench_memory_rss.py  bench_notary_verify.py  bench_ocr_quality.py  bench_query.py  bench_route.py  bench_scale.py  bench_suite.py  build_lattices.py  check_determinism.py  check_leaves_vs_receipts.py  compact.py  demo_route_compose.py  extract_assets.py  fetch_samples.py  generate_vendor_samples.py  make_dev_jwt.py  query.py  (+4 more)
(+189 files in other folders)
